# beamax

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  mkdocs.yml  pyproject.toml  pyrightconfig.json
.github/workflows/: docs.yml  run-tests.yml
beamax/: __init__.py  decomposition.py  geometry.py  plotter.py  transforms.py
beamax/gb/: __init__.py  core.py  gb_solvers.py  gb_utils.py
beamax/solvers/: __init__.py  fno_solver_pdequinox.py  hybrid_solver.py  hybrid_solver_utils.py  kwave_solver.py  solverbase.py
beamax/solvers/msgb_solvers/: adjoint_solver_utils.py  forward_solver_utils.py  msgb_solver.py  tr_solver_utils.py
beamax/utils/: __init__.py  arrays.py  coeff_index.py  device.py  fft.py  interp.py
docs/: getting-started.md  index.md  readme.md  troubleshooting.md
docs/api/: decomposition.md  geometry.md  plotter.md  transforms.md  utils.md
docs/api/gb/: core.md  gb_solvers.md  gb_utils.md
docs/api/solvers/: fno_neurops.md  fno_pdequinox.md  hybrid_solver.md  hybrid_solver_utils.md  kwave_solver.md  solverbase.md
docs/examples/: adjoint.md  benchmarks.md  comparison.md  decomp.md  decomposition.md  forward.md  index.md  rays.md  reconstruction.md  single-gaussian-beam.md  time-reversal.md
docs/guides/: custom-low-frequency-solvers.md
examples/: README.md
examples/benchmarks/: gb-vs-kw-runtime.ipynb  gb-vs-kw-runtime.py  memory_test.ipynb  memory_test.py  memory_test_detailed.ipynb  memory_test_detailed.py  strong-weak-scaling.ipynb  strong-weak-scaling.py  wpt-decomp-runtime.ipynb  wpt-decomp-runtime.py
examples/bowtie/: angle_mapping.ipynb  angle_mapping.py  test2d.ipynb  test2d.py  test3d.ipynb  test3d.py  test3d_aliasing.ipynb  test3d_aliasing.py
examples/decomp/: frames-figure.ipynb  frames-figure.py  frames_grid.ipynb  frames_grid.py  lp_hp_filter.ipynb  lp_hp_filter.py  mswpt_error_plot.ipynb  mswpt_error_plot.py
examples/decomposition/: low_high_pass_filters.ipynb  low_high_pass_filters.py  wave_packet_cutoff_error.ipynb  wave_packet_cutoff_error.py  wave_packet_frame_atoms.ipynb  wave_packet_frame_atoms.py
examples/diagnostics/: msgb_adjoint_pairing.py
examples/forward/: 1d_forward_kwave_reference.ipynb  1d_forward_kwave_reference.py  1d_forward_solve.ipynb  1d_forward_solve.py  2d_forward.ipynb  2d_forward.py  2d_forward_kwave_reference.ipynb  2d_forward_kwave_reference.py  2d_forward_solve.ipynb  2d_forward_solve.py  custom_lf_spectral_backend.ipynb  custom_lf_spectral_backend.py  forward-1d-v0.ipynb  forward-1d-v0.py  forward-1d.ipynb  forward-2d-v0.ipynb  forward-2d-v0.py  forward-2d.ipynb  forward-2d.py  forward-3d.ipynb  forward-3d.py  forward_3d_full.ipynb  fwd-3d.ipynb
examples/mapping/: single_gb_space_data_mapping.py
examples/rays/: 2d_ray_bending.ipynb  2d_ray_bending.py  2d_rays_autodiff.ipynb  2d_rays_autodiff.py  _curves.ipynb  _curves.py  _velocitymaps.ipynb  _velocitymaps.py  col.ipynb  col.py  colour_rays2d.ipynb  neural_sound_speed_autofocus.ipynb  neural_sound_speed_autofocus.py  rays-stiffness.ipynb  rays-stiffness.py  rays2d-anim.ipynb  rays2d-anim.py  rays2d-animTR.ipynb  rays2d-animTR.py  rays2d.ipynb  rays2d.py  rays3d.ipynb  rays3d.py  rays3d2.ipynb  rays3d2.py
examples/reconstruction/: 2d_time_reversal_and_adjoint.ipynb  2d_time_reversal_and_adjoint.py
examples/reconstruction/adjoint/: AD-2d.ipynb  AD-2d.py  AD-2d2.ipynb  AD-2d2.py  AD-2d3.ipynb  AD-2d3.py  autodiff-1d.ipynb  autodiff-1d.py  autodiff-2d.ipynb  autodiff-2d.py  autodiff-3d.ipynb  autodiff-3d.py
examples/reconstruction/comparison/: adj-vs-TR-boxtest.ipynb  adj-vs-TR-boxtest.py  breast_tr_adj_faces.ipynb  (+5 more)
examples/single-gaussian-beam/: single_gaussian_beam_absorption.ipynb  single_gaussian_beam_absorption.py
examples/singleGB/: singleGBabsorption.ipynb  singleGBconvergence.ipynb  singleGBenergy.ipynb  singleGBenergy.py  singleGBplot.ipynb  singleGBplot.py  singleGBpropagation.ipynb  singleGBpropagation.py  singleGBrayleigh-error.ipynb  singleGBrayleigh-error.py  singleGBwpt.ipynb  singleGBwpt.py
src/beamax/: __init__.py  decomposition.py  geometry.py  plotter.py  transforms.py
tests/: test_decomposition.py  test_frames.py  test_gb.py  test_geometry.py  test_ms_filters.py  test_plotter.py  test_profiling.py  test_transforms.py  test_utils.py  test_version.py
tests/mat-file/: example_pr_2D_adjoint_vs_TR.m
tests/solvers/: test_adj_solver_utils.py  test_fno_solver.py  test_fwd_solver.py  test_hybrid_misc.py  test_kwave_misc.py  test_kwave_solver.py  test_msgb_aggregation.py  test_msgb_solver_misc.py  test_sharding.py  test_sharding_contract.py  test_solver_utils.py  test_tr_solver.py
tools/: convert_notebooks.py  finalize_examples.py  gen_examples_readme.py  install-hooks.sh  repro_kwave_upstream_binary_absorption.py  run_examples.py  smoke_float32.py
tools/hooks/: check-public-push.sh  pre-commit  pre-push
(+38 files in other folders)
